# s2fview

./: .gitignore  LICENSE  MILESTONES.md  README.md  features.md  igv_demo.ipynb  notebook.ipynb  notebook_genomeview.ipynb  notebook_interactive.ipynb  notebook_plotly.ipynb  pyproject.toml
plots/: README.md
scripts/: extract_plots.py
src/s2fview/: __init__.py  plotly_track.py
