[project]
name = "s2fview"
version = "0.1.0"
description = "like igv in jupyter notebooks but better"
authors = [
    { name = "Timon Schneider", email = "mail@timonschneider.de" }
]
requires-python = ">=3.12"
dependencies = [
    "anywidget>=0.11.0",
    "ipykernel>=7.2.0",
    "numpy>=2.0",
    "plotly>=6.7.0",
]

[build-system]
requires = ["uv_build>=0.9.16,<0.10.0"]
build-backend = "uv_build"
